--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,4 @@ import:
   - package: github.com/ghodss/yaml
   - package: github.com/fatih/color
   - package: github.com/valyala/fasttemplate
+  - package: github.com/hashicorp/consul/api
